# GroundingDINO

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: vlm.launch
private/: ground.py
private/Ground/: ros_ground.py  test_ground.py
private/Ollama/: ollama_ros.py  ollama_ros_node.py  qwen.py  test.py
