<?xml version="1.0"?>
<package format="2">
  <name>vlm</name>
  <version>0.1.0</version>
  <description>GroundingDINO ROS integration</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
